# codesurgeon

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: bench.yml  ci.yml  release.yml
benches/: baseline.json  token_baseline.json
benches/swebench/: README.md  WARM_WORKSPACES.md  mcp_with.json  prepare_workspace.sh  report_pilot.md  run.py  select_tasks.py  smoke.md  tasks.json
benches/swebench/pilot_results/: harness_with.json  harness_without.json  results.jsonl
crates/cs-cli/: Cargo.toml
crates/cs-cli/src/: main.rs
crates/cs-cli/tests/: cli.rs
crates/cs-core/: Cargo.toml  build.rs
crates/cs-core/assets/: ts-enricher.js
crates/cs-core/benches/: indexing.rs
crates/cs-core/examples/: token_savings.rs
crates/cs-core/src/: anchors.rs  capsule.rs  db.rs  diff.rs  edges.rs  emb_store.rs  embedder.rs  engine.rs  graph.rs  indexer.rs  language.rs  lib.rs  macro_expand.rs  memory.rs  module_docs.rs  pyright_enrich.rs  ranking.rs  rustdoc_enrich.rs  search.rs  skeletonizer.rs  symbol.rs  ts_enrich.rs  watcher.rs
crates/cs-core/tests/: capsule.rs  engine.rs  enrichment_e2e.rs  language.rs  ranking_adaptive.rs  ranking_v16.rs  reverse_expand.rs  skeletonizer.rs
crates/cs-mcp/: Cargo.toml
crates/cs-mcp/src/: main.rs  transport.rs
crates/cs-mcp/tests/: mcp_protocol.rs
docs/: change-categories.md  doctest-edge-contamination.md  enrichment.md  expand-research-status.md  explicit-symbol-anchors.md  indexing.md  memory-consolidation.md  query-history-ranking.md  ranking.md  release-review-1.0.md  self_improvement.md  stats.md
docs/learnings/: 2026-04-22-capsule-feedback-loops.md
scripts/: bench_summary.py  swebench_eval.py  swebench_pilot.sh  swebench_quick_report.py  swebench_report.py  swebench_trace.py
