[package]
name = "cs-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for codesurgeon — local-first codebase context engine for AI coding agents"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "codesurgeon"
path = "src/main.rs"

[dependencies]
cs-core = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
