[package]
name = "cs-mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "codesurgeon-mcp"
path = "src/main.rs"

[dependencies]
cs-core = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
