[package]
name = "cs-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for codesurgeon — local-first codebase context engine for AI coding agents"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "codesurgeon-mcp"
path = "src/main.rs"

[dependencies]
cs-core = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
